--- a/GoICP_config.cfg
+++ b/GoICP_config.cfg
@@ -22,10 +22,11 @@ transMinZ=-0.5
 transWidth=1.0
 
 # Set to 0.0 for no trimming
-trimFraction=0.05
+#trimFraction=0.05
+trimFraction=0.0
 
 # Nodes per dimension of distance transform
 distTransSize=300
-# DistanceTransformWidth = distExpandFactor x WidthLargestDimension
-distExpandFactor=2.0
+# DistanceTransformWidth = ExpandFactor x WidthLargestDimension
+distTransExpandFactor=2.0
 
