Added tests for Go ICP without coarse registration

--- a/GoICP_config.cfg
+++ b/GoICP_config.cfg
@@ -26,7 +26,8 @@ transWidth=1.0
 trimFraction=0.1
 
 # Nodes per dimension of distance transform
-distTransSize=300
+#distTransSize=300
+distTransSize=50
 # DistanceTransformWidth = ExpandFactor x WidthLargestDimension
 distTransExpandFactor=2.0
 
